[tool.isort]
profile = "black"
src_paths = [
    "requests",
    "test",
]
honor_noqa = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.2"
testpaths = [
    "requests",
    "tests",
]

[project]
version = "2.31.0+lineaje.1"
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/psf-requests"
Repository = "https://github.com/lineaje-labs-gos/psf-requests"
Tracker = "https://github.com/lineaje-labs-gos/psf-requests/issues"
